# vsgi

./: .dockerignore  Containerfile  README.md  meson.build
.github/workflows/: valac.yml
examples/: application.empty.vala  example_app.vala  meson.build
src/lib/vsgi/apps/: file_server.vala
src/lib/vsgi/utils/: status.vala
tests/: meson.build
tests/lib/vsgi/: app_tests.vala  compositeapp_tests.vala  testmain.vala
tests/lib/vsgi/apps/: file_server_tests.vala
tests/servers/: fcgi_tests.vala  simple_tests.vala  testmain.vala
